# Lie-Detector

./: README.md
classificators_and_data/: .gitignore  README.md  pyproject.toml  requirements.txt
classificators_and_data/EDA/: README.md  eda.ipynb  plots_for_paper.ipynb  threshold_classification_results_1_20241111_001451.json
classificators_and_data/EDA/eda/: initial_eda.ipynb  utils.py
classificators_and_data/EDA/grid_search_outputs/: grid_search_results_1.json
classificators_and_data/ai-venv/: pyvenv.cfg
classificators_and_data/data_extractor/: README.md  data_extractor.py  example.ipynb
classificators_and_data/data_manipulation/: utils.py
classificators_and_data/data_preprocessing/: utils.py
classificators_and_data/final_models/: ExampleLieModel.py  ExperimentManager.py  LieModel.py  README.md  config.py  final_runs.ipynb
classificators_and_data/final_models/neural_networks/: README.md  constants.py  dgcnn_final_model.py  fbcnet_final_model.py  generate_conf_matrixes.py  lstm_final_model.py  neural_networks_run.py  typings.py
classificators_and_data/final_models/random_forest/: README.md  RandomForestModel.py  final_runs.ipynb  result_analysis.ipynb
classificators_and_data/machine_learning/: README.md  files_lib.py  ml_lib.py  preprocessing_lib.py  visualisation_lib.py
classificators_and_data/neural_networks/: README.md  all_tested_values.ipynb  constants.py  requirements.txt  train.py
experiment/: .gitignore  README.md  display_data.ipynb  main.py  pyproject.toml
experiment/src/: common.py  config.py
experiment/src/gui/: README.md  (+5 more)
(+1002 files in other folders)
