[tool.poetry]
name = "ab"
version = "0.1.0"
description = ""
package-mode = false

[tool.poetry.dependencies]
python = "3.12.7"
joblib = "1.4.2"
mne = "1.8.0"
pandas = "2.2.3"
seaborn = "0.13.2"
scikit-learn = "1.6.0"
torcheeg = "1.1.2"
ipykernel = "6.29.5"
tensorboard = "2.17.1"
frozendict = "2.4.6"
torch = "2.5.1"
torchvision = "0.20.1"
torchaudio = "2.5.1"
scipy = "^1.15.1"


[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
